[package]
name = "mpc-bench"
description = "Multi-party computation experimentation library"
version = "0.6.0"
authors = ["Jelle Vos <J.V.Vos@tudelft.nl>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/jellevos/mpc-bench"
repository = "https://github.com/jellevos/mpc-bench"
readme = "README.md"

[dependencies]
queues = "1.1"
rayon = "1.5"
