[package]
name = "mpc-bench"
description = "Multi-party computation experimentation library"
version = "0.8.1"
authors = ["Jelle Vos <J.V.Vos@tudelft.nl>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/jellevos/mpc-bench"
repository = "https://github.com/jellevos/mpc-bench"
readme = "README.md"

[dependencies]
queues = "1.1"
rayon = "1.5"
tabled = "0.8"
streaming-stats = "0.2"
csv = "1.1"
